pkg/app/piped/executor/kubernetes/testdata/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple
spec:
  replicas: 10
  selector:
    matchLabels:
      app: simple
  template:
    metadata:
      labels:
        app: simple
    spec:
      containers:
      - args:
        - server
        image: gcr.io/pipecd/helloworld:v0.1.0-73-ge191187
        imagePullPolicy: IfNotPresent
        name: helloworld
        ports:
        - containerPort: 9085
          protocol: TCP
        # TODO: Update the references in ENV list.
        # env:
        # - name: CONFIG_ENV
        #   valueFrom:
        #     configMapKeyRef:
        #       key: key
        #       name: configmap-name-2
        # - name: SECRET_ENV
        #   valueFrom:
        #     secretKeyRef:
        #       key: key
        #       name: secret-name-1
      volumes:
      - name: secret-1
        secret:
          defaultMode: 256
          secretName: secret-name-1
      - name: secret-2
        secret:
          defaultMode: 256
          secretName: secret-name-2
      - configMap:
          defaultMode: 420
          name: configmap-name-1
        name: config-1
      - configMap:
          defaultMode: 420
          name: configmap-name-2
        name: config-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-canary
  creationTimestamp: 
spec:
  replicas: 9
  selector:
    matchLabels:
      app: simple
      pipecd.dev/variant: canary-variant
  strategy: {}
  template:
    metadata:
      creationTimestamp: 
      labels:
        app: simple
        pipecd.dev/variant: canary-variant
    spec:
      containers:
      - args:
        - server
        image: gcr.io/pipecd/helloworld:v0.1.0-73-ge191187
        imagePullPolicy: IfNotPresent
        name: helloworld
        ports:
        - containerPort: 9085
          protocol: TCP
        resources: {}
      volumes:
      - name: secret-1
        secret:
          defaultMode: 256
          secretName: secret-name-1-canary
      - name: secret-2
        secret:
          defaultMode: 256
          secretName: secret-name-2
      - configMap:
          defaultMode: 420
          name: configmap-name-1
        name: config-1
      - configMap:
          defaultMode: 420
          name: configmap-name-2-canary
        name: config-2
status: {}
