pkg/app/piped/executor/kubernetes/testdata/generated-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - helloworld
  http:
  - name: no-specified-destinations
    route:
    - destination:
        host: helloworld
        subset: primary
      weight: 50
    - destination:
        host: helloworld
        subset: canary
      weight: 30
    - destination:
        host: helloworld
        subset: baseline
      weight: 20
  - name: include-destinations-for-all-variants
    route:
    - destination:
        host: helloworld
        subset: primary
      weight: 50
    - destination:
        host: helloworld
        subset: canary
      weight: 30
    - destination:
        host: helloworld
        subset: baseline
      weight: 20
  - match:
    - headers:
        end-user:
          exact: jason
      ignoreUriCase: true
      uri:
        prefix: /ratings/v2/
    name: only-primary-destination
    route:
    - destination:
        host: helloworld
        subset: primary
      weight: 50
    - destination:
        host: helloworld
        subset: canary
      weight: 30
    - destination:
        host: helloworld
        subset: baseline
      weight: 20
  - name: include-destination-to-other-host
    route:
    - destination:
        host: helloworld
        subset: primary
      weight: 25
    - destination:
        host: helloworld
        subset: canary
      weight: 15
    - destination:
        host: helloworld
        subset: baseline
      weight: 10
    - destination:
        host: another-host
      weight: 50
