pkg/app/piped/executor/kubernetes/testdata/patch_configmap_field_multi_ops.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy-config: |-
    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9095
    static_resources:
      listeners:
      - name: ingress
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 9090
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: ingress_http
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              http_filters:
              - name: envoy.filters.http.grpc_web
              - name: envoy.filters.http.cors
              - name: envoy.filters.http.grpc_stats
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                  stats_for_all_methods: true
                  enable_upstream_stats: true
              - name: envoy.filters.http.router
              route_config:
                name: local_route
                virtual_hosts:
                - name: envoy
                  domains:
                    - '*'
                  cors:
                    allow_origin_string_match:
                      - exact: http://localhost:9090
                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
                    allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                    allow_credentials: true
                    max_age: "1728000"
                    expose_headers: custom-header-1,grpc-status,grpc-message
                  routes:
                    - match:
                        prefix: /service.pipedservice.PipedService/
                        grpc: {}
                      route:
                        cluster: grpc-piped-service
                    - match:
                        prefix: /service.webservice.WebService/
                        grpc: {}
                      route:
                        cluster: grpc-web-service
                    - match:
                        prefix: /service.apiservice.APIService/
                        grpc: {}
                      route:
                        cluster: grpc-api-service
                    - match:
                        prefix: /
                      route:
                        cluster: server-http
          transport_socket:
            name: envoy.transport_socket.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                - certificate_chain:
                    filename: /etc/test-secret/internal-tls.cert
                  private_key:
                    filename: /etc/test-secret/internal-tls.key
                alpn_protocols: h2
      clusters:
      - name: grpc-piped-service
        http2_protocol_options: {}
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: grpc-piped-service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: test-server
                    port_value: 9080
        track_cluster_stats:
          request_response_sizes: true
      - name: grpc-web-service
        http2_protocol_options: {}
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: grpc-web-service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: test-server
                    port_value: 9081
        track_cluster_stats:
          request_response_sizes: true
      - name: grpc-api-service
        http2_protocol_options: {}
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: grpc-api-service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: test-server
                    port_value: 9083
        track_cluster_stats:
          request_response_sizes: true
      - name: server-http
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: server-http
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: test-server
                    port_value: 9082
        track_cluster_stats:
          request_response_sizes: true
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy-config: |-
    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 19095
    static_resources:
      listeners:
      - name: ingress
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 9090
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: ingress_http
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              http_filters:
              - name: envoy.filters.http.grpc_web
              - name: envoy.filters.http.cors
              - name: envoy.filters.http.grpc_stats
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                  stats_for_all_methods: true
                  enable_upstream_stats: true
              - name: envoy.filters.http.router
              route_config:
                name: local_route
                virtual_hosts:
                - name: envoy
                  domains:
                    - '*'
                  cors:
                    allow_origin_string_match:
                      - exact: http://localhost:9090
                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
                    allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                    allow_credentials: true
                    max_age: "1728000"
                    expose_headers: custom-header-1,grpc-status,grpc-message
                  routes:
                    - match:
                        prefix: /service.pipedservice.PipedService/
                        grpc: {}
                      route:
                        cluster: grpc-piped-service
                    - match:
                        prefix: /service.webservice.WebService/
                        grpc: {}
                      route:
                        cluster: grpc-web-service
                    - match:
                        prefix: /service.apiservice.APIService/
                        grpc: {}
                      route:
                        cluster: grpc-api-service
                    - match:
                        prefix: /
                      route:
                        cluster: server-http
          transport_socket:
            name: envoy.transport_socket.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                - certificate_chain:
                    filename: /etc/test-secret/internal-tls.cert
                  private_key:
                    filename: /etc/test-secret/internal-tls.key
                alpn_protocols: h2
      clusters:
      - name: grpc-piped-service
        http2_protocol_options: {}
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: grpc-piped-service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: test-server
                    port_value: 9080
        track_cluster_stats:
          request_response_sizes: true
      - name: grpc-web-service
        http2_protocol_options: {}
        connect_timeout: 0.25s
        type: DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: grpc-web-service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: test-server
                    port_value: 19081
        track_cluster_stats:
          request_response_sizes: true
      - name: grpc-api-service
        http2_protocol_options: {}
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: grpc-api-service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: test-server
                    port_value: 9083
        track_cluster_stats:
          request_response_sizes: true
      - name: server-http
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: server-http
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: test-server
                    port_value: 9082
        track_cluster_stats:
          request_response_sizes: true
