pkg/app/piped/executor/kubernetes/testdata/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - helloworld
  http:
  - name: no-specified-destinations
  - name: include-destinations-for-all-variants
    route:
    - destination:
        host: helloworld
        subset: primary
      weight: 100
    - destination:
        host: helloworld
        subset: canary
      weight: 0
    - destination:
        host: helloworld
        subset: baseline
      weight: 0
  - name: zero-weights-were-not-specified
    route:
    - destination:
        host: helloworld
        subset: primary
      weight: 100
  - name: only-primary-destination
    match:
    - headers:
        end-user:
          exact: jason
      ignoreUriCase: true
      uri:
        prefix: /ratings/v2/
    route:
    - destination:
        host: helloworld
        subset: primary
  - name: include-destination-to-other-host
    route:
    - destination:
        host: helloworld
        subset: primary
      weight: 50
    - destination:
        host: another-host
      weight: 50
